--- a/css/styles.css
+++ b/css/styles.css
@@ -3668,7 +3668,12 @@ textarea.form-control-lg {
   overflow: hidden;
   border-top: 1px solid rgba(0, 0, 0, 0.15);
 }
-
+.div2 {
+  width: 300px;
+  height: 100px;  
+  padding: 50px;
+  border: 1px solid red;
+}
 .dropdown-item {
   display: block;
   width: 100%;
@@ -10900,7 +10905,7 @@ p.lead {
     left: 0;
     display: flex;
     flex-direction: column;
-    width: 17rem;
+    width: 20rem;
     height: 100vh;
   }
   #sideNav .navbar-brand {
@@ -10957,7 +10962,7 @@ p.lead {
 section.resume-section {
   display: flex;
   align-items: center;
-  padding-left: 1rem;
+  padding-left: 5rem;
   padding-right: 1rem;
   padding-top: 5rem;
   padding-bottom: 5rem;
@@ -10974,7 +10979,7 @@ section.resume-section .resume-section-content {
 }
 @media (min-width: 992px) {
   section.resume-section {
-    padding-left: 3rem;
+    padding-left: 5rem;
     padding-right: 3rem;
     padding-top: 5rem;
     padding-bottom: 5rem;
